crates/uitest/fixtures/ty_check/binary.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/binary.fe
---
error[8-0017]: `std::ops::Add` trait is not implemented
  ┌─ binary.fe:4:5
  │
4 │     f + f
  │     ^^^^^
  │     │
  │     `+` cant be applied to `Foo`
  │     Try implementing `std::ops::Add` for `Foo`

error[8-0017]: `std::ops::And` trait is not implemented
  ┌─ binary.fe:6:6
  │
6 │     (f && f) || f
  │      ^^^^^^
  │      │
  │      `&&` cant be applied to `Foo`
  │      Try implementing `std::ops::And` for `Foo`

error[8-0017]: `std::ops::Eq` trait is not implemented
  ┌─ binary.fe:7:5
  │
7 │     f == f
  │     ^^^^^^
  │     │
  │     `==` cant be applied to `Foo`
  │     Try implementing `std::ops::Eq` for `Foo`

error[8-0017]: `std::ops::Ord` trait is not implemented
  ┌─ binary.fe:8:5
  │
8 │     f < f
  │     ^^^^^
  │     │
  │     `<` cant be applied to `Foo`
  │     Try implementing `std::ops::Ord` for `Foo`


